fix bug on windows and add more code to GUI class